--- a/WebNET/packages.config
+++ b/WebNET/packages.config
@@ -8,10 +8,7 @@
   <package id="dbup-mysql" version="4.4.0" targetFramework="net472" />
   <package id="Devart.Data" version="5.0.2478" targetFramework="net472" />
   <package id="Devart.Data.MySql" version="8.17.1686" targetFramework="net472" />
-  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
-  <package id="FluentMigrator.Abstractions" version="3.2.7" targetFramework="net472" />
-  <package id="FluentMigrator.Runner.Core" version="3.2.7" targetFramework="net472" />
-  <package id="FluentMigrator.Runner.MySql" version="3.2.7" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -23,12 +20,8 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.6" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.6" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
@@ -36,27 +29,27 @@
   <package id="MiniProfiler.Providers.MySql" version="4.2.1" targetFramework="net472" />
   <package id="MiniProfiler.Shared" version="4.2.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.16" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.21" targetFramework="net472" />
   <package id="MySql.Data.Entities" version="6.8.3.0" targetFramework="net472" />
-  <package id="MySql.Data.Entity" version="6.10.9" targetFramework="net472" />
-  <package id="MySql.Data.EntityFramework" version="8.0.16" targetFramework="net472" />
-  <package id="MySqlConnector" version="1.0.0" targetFramework="net472" />
+  <package id="MySql.Data.EntityFramework" version="8.0.21" targetFramework="net472" />
+  <package id="MySqlConnector" version="0.60.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="Platform.NET" version="1.2.4" targetFramework="net472" />
   <package id="Platform.Xml.Serialization" version="1.2.4" targetFramework="net472" />
   <package id="Shaolinq" version="1.9.5" targetFramework="net472" />
   <package id="Shaolinq.MySql" version="1.9.5" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
   <package id="System.Diagnostics.PerformanceCounter" version="4.5.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
