--- a/WebNET/Web.config
+++ b/WebNET/Web.config
@@ -42,11 +42,7 @@
 		  </dependentAssembly>
 	  </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    
-    
-    <add name="farmfreshEntities" connectionString="metadata=res://*/Models.QuanLyBanHang.csdl|res://*/Models.QuanLyBanHang.ssdl|res://*/Models.QuanLyBanHang.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K5DBSLP\SQLEXPRESS;initial catalog=farmfresh;user id=thanh;password=thanh98thehepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="MySql.Data.EntityFramework.MySqlConnectionFactory, MySql.Data.EntityFramework">
       <parameters>
@@ -67,4 +63,4 @@
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
-</configuration>
+<connectionStrings><add name="farmfreshEntities" connectionString="metadata=res://*/Models.farmfresh.csdl|res://*/Models.farmfresh.ssdl|res://*/Models.farmfresh.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K5DBSLP\SQLEXPRESS;initial catalog=farmfresh;user id=thanh;password=thanh98thehepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
