--- a/WebNET/Web.config
+++ b/WebNET/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	
   </appSettings>
   <runtime>
 	  <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -34,12 +35,32 @@
 		  </dependentAssembly>
 		  <dependentAssembly>
 			  <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-			  <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+			  <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
 		  </dependentAssembly>
 		  <dependentAssembly>
 			  <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-			  <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+			  <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
 		  </dependentAssembly>
+	   <dependentAssembly>
+	    <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-8.0.21.0" newVersion="8.0.21.0" />
+	   </dependentAssembly>
+	   <dependentAssembly>
+	    <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-3.1.6.0" newVersion="3.1.6.0" />
+	   </dependentAssembly>
+	   <dependentAssembly>
+	    <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+	   </dependentAssembly>
+	   <dependentAssembly>
+	    <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+	   </dependentAssembly>
+	   <dependentAssembly>
+	    <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+	    <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+	   </dependentAssembly>
 	  </assemblyBinding>
   </runtime>
   
@@ -55,7 +76,13 @@
     
   </entityFramework>
   <system.web>
-    <compilation debug="true" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Home/LoiDangNhap" timeout="280"></forms>
+	  </authentication>
+	  <globalization fileEncoding="utf-8" />
+    <compilation debug="true">
+      
+   </compilation>
   </system.web>
   <system.codedom>
     <compilers>
@@ -63,4 +90,6 @@
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="farmfreshEntities" connectionString="metadata=res://*/Models.farmfresh.csdl|res://*/Models.farmfresh.ssdl|res://*/Models.farmfresh.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K5DBSLP\SQLEXPRESS;initial catalog=farmfresh;user id=thanh;password=thanh98thehepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+
+	
+<connectionStrings><add name="farmfreshEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K5DBSLP\SQLEXPRESS;initial catalog=farmfresh;user id=thanh;password=thanh98thehepro;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
